# DocReassembly

./: .gitignore  CMakeLists.txt  Makefile  README.md  autoclean.sh  autogen.sh  benchmark.sh  calc_scores.py  calibrate_imgs.py  format_scores.py  mark_bg.py
data/: cp_dataset_test.txt  cp_dataset_train.txt
data/saved_models/: best.pt
data/scores/: DNN_result_synthetic.json  doc0.txt  doc10.txt  doc11.txt  doc12.txt  doc13.txt  doc14.txt  doc15.txt  doc16.txt  doc16_noise20.txt  doc16_noise50.txt  doc17.txt  doc18.txt  doc18_100.txt  doc18_noise20.txt  doc19.txt  doc19_noise5.txt  doc20.txt  doc21.txt  doc23.txt  doc24.txt  doc3.txt  doc7.txt
data/symbols/: Abyssinica.box  Abyssinica.tif  arial.box  arial.tif  arial_bold.box  auto_text2image.sh  fontslist.txt  remove_enter.py  symbol.box  symbol.tif  symbols.txt
include/: KM.h  add_noise.h  build_dataset.h  build_training_dataset.h  compatibility_dataset.h  compatibility_net.h  create_stripes.h  debug_tool.h  fragment.h  generate_puzzle.h  generate_stripes.h  main.h  ocr_extractor.h  path_manager.h  solve_puzzle.h  solve_stripes.h  square_generator.h  squares_generator.h  squares_solver.h  stripe_pair.h  stripes.h  stripes_generator.h  stripes_solver.h  test_realdata.h  train_evaluator.h  utils.h
src/: add_noise.cpp  create_stripes.cpp  debug_tool.cpp  fragment.cpp  generate_puzzle.cpp  generate_stripes.cpp  main.cpp  ocr_extractor.cpp  solve_puzzle.cpp  solve_stripes.cpp  square_generator.cpp  squares_generator.cpp  squares_solver.cpp  stripe_pair.cpp  stripes.cpp  stripes_generator.cpp  stripes_solver.cpp  utils.cpp
src/evaluator/: build_dataset.cpp  build_training_dataset.cpp  compatibility_dataset.cpp  compatibility_net.cpp  test_realdata.cpp  train_evaluator.cpp
src/generator/: generate_puzzle.cpp  stripes_generator.cpp
src/solver/: KM.cpp  fragment.cpp  path_manager.cpp  solve_puzzle.cpp  squares_solver.cpp  stripe_pair.cpp  stripes_solver.cpp
